@@ -1,3 +1,5 @@
+- urpmi:
+  o add support for --reinstall
 - urpmq:
   o display epoch when using -i (mga#25735)
 - cpan_testers:
